# prism

./: .gitignore  BUGS.md  DEVPLAN.md  FUTURE_IDEAS.md  GEMINI.md  README.md  commit_message.txt  dogfooding_exec_tree.json  pr_body.txt  project.json  project.json.backup  pyproject.toml  squash_commit_message.txt
.prism/: config.json  cursor.json  execution.json  orphans.json  strategic.json
.prism/archive/: 120dfb98-41b5-440c-8c08-b9822d72cb8b.exec.json  19511760-583b-429b-ad2c-ca50e7ea0d26.exec.json  38a59413-de76-42ba-94fd-848c7e81f605.exec.json  3bb749fa-7883-4c90-9f3f-5298fc52f3ea.exec.json  4d815b38-fe84-4e29-a67e-d3ddbc680da9.exec.json  5441003e-3530-4032-b534-4c97c93edc3f.exec.json  6f5c5a3b-255c-4159-9743-d7763ad01ff0.exec.json  70457ad0-4846-4167-b2f5-120d0d5d4c4a.exec.json  strategic.json  (+7 more)
prism/: archived_item.py  cli.py  cli_old.py  constants.py  core.py  core_old.py  data_store.py  data_store_old.py  exceptions.py  models.py  models_old.py  navigator.py  navigator_old.py  newcli.py  newcore.py  signals.py  storage_manager.py  tracker.py  utils.py
scripts/: migrate_project.py
tests/: conftest.py  test_archive_manager.py  test_auto_archive.py  test_bug_model.py  test_cli.py  test_cli_commands.py  test_core.py  test_data_store.py  test_exec_cli.py  test_models.py  test_navigation_manager.py  test_new_cli.py  test_orphan_manager.py  test_orphan_model.py  test_placeholder.py  test_prism_core.py  test_project_manager.py  test_status_cli.py  test_storage_manager.py  test_task_cli.py  test_task_manager.py  test_tracker.py  test_utils.py
(+42 files in other folders)
